# Chess

./: .gitignore  CLAUDE.md  pyproject.toml
chessrl/: __init__.py
experiments/: arch-10x128.yaml  baseline.yaml  dev-tiny.yaml  eval_live.yaml  gp-always-win.yaml  gp-lp-goal.yaml  gp-random-goal.yaml  gp-vanilla.yaml  v2-smoke.yaml  v2-stage1.yaml  v3-smoke.yaml  v3-zenith-w8.yaml
scripts/: analyze_transfer.py  eval_sweep.py  evaluate.py  fetch_stockfish.py  profile_selfplay.py  round_robin.py  screenshot_compare.py  serve.py  time_to_elo.py  train.py
server/: app.py  arena.py  catalog.py  live.py  rooms.py
tests/: test_analyze_transfer.py  test_arena.py  test_batched_evaluator.py  test_batched_goal_concurrent.py  test_batched_goal_equivalence.py  test_batched_mcts.py  test_buffer.py  test_catalog.py  test_cluster_her.py  test_cluster_labels.py  test_concurrent_selfplay.py  test_config.py  test_config_m5.py  test_config_m6.py  test_curriculum.py  test_daemon.py  test_deadline_consistency.py  test_encoding.py  test_eval_sweep.py  test_feed.py  test_game.py  test_goal_clustering.py  test_goal_encoding.py  test_goal_features.py  test_goal_network.py  test_goal_reservoir.py  test_goal_smoke.py  test_goal_templates.py  test_goal_verifier.py  test_goalspace.py  test_goalspace_config.py  test_her_samples.py  test_live.py  test_match.py  test_mcts.py  test_mcts_goal_regression.py  test_mcts_goal_terminals.py  test_meansend_aux.py  test_meansend_mcts.py  test_meansend_selfplay.py  (+44 more)
web/: arena.html  arena.js  common.js  compare.html  compare.js  dashboard.js  goals.html  (+9 more)
(+65 files in other folders)
